<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Domino</string>
    <string name="str_quick_start_head">Do you want to play a game?</string>
    <string name="str_quick_start_askquestion"></string>
    <string name="title_activity_settings">Settings</string>
    <string name="gamediff_easy">Easy</string>
    <string name="gamediff_medium">Medium</string>
    <string name="gamediff_hard">Hard</string>
    <string name="game_difficulty_title">Difficulty</string>
    <string name="first_player_title">First Player</string>
    <string name="play_type_title">Play Type</string>
    <string name="first_player_ai">AI</string>
    <string name="first_player_player">Player</string>
    <string name="play_over_bluetooth">Bluetooth</string>
    <string name="play_over_textbox">TextBox</string>
    <string name="btn_save_label">Save</string>
    <string name="btn_stats_label">Stats</string>
    <string name="btn_settings_label">Settings</string>
    <string name="btn_feedback_label">Send Feedback</string>
    <string name="btn_resume_label">Resume</string>
    <string name="btn_rules_label">Rules</string>
    <string name="btn_newgame_label">New Game</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="total_games_played_title">Total Games Played</string>
    <string name="highest_score_title">Highest Score</string>
    <string name="longest_streak_title">Longest Streak</string>
    <string name="best_letter_title">Best Letter</string>
    <string name="title_activity_game_view">GameView</string>
    <string name="rule_text_one">Players take turns coming up with words that begin with the last letter that the previous words ended with.</string>
    <string name="rule_text_two">For example, Amsterdam -> Montreal -> Los Angeles. This keeps on going until one player doesn\'t answer correctly.</string>
    <string name="rule_text_three">Also, remember these 3 important rules:</string>
    <string name="rule_text_four">1. All words have to belong to a certain category (for example: cities).</string>
    <string name="rule_text_five">2. You can\'t repeat words that have been previously used.</string>
    <string name="rule_text_six">3. Finally, three strikes and you\'re out.</string>
    <string name="title_activity_rules">Rules</string>

</resources>

