<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <RadioGroup
            android:id="@+id/radioGroupGameDiff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <RadioButton
                android:id="@+id/rb_gamediff_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamediff_easy"
                android:textSize="12pt"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rb_gamediff_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamediff_medium"
                android:textSize="12pt" />

            <RadioButton
                android:id="@+id/rb_gamediff_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamediff_hard"
                android:textSize="12pt" />

        </RadioGroup>
    </RelativeLayout>
</RelativeLayout>